--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@tweakpane/plugin-essentials": "^0.2.1",
+    "gsap": "^3.14.2",
+    "leva": "^0.10.1",
+    "maath": "^0.10.8",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "simplex-noise": "^4.0.3",
+    "tweakpane": "^4.0.5",
+    "uuid-by-string": "^4.0.0",
+    "wouter": "^3.9.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
