--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
     "@tweakpane/plugin-essentials": "^0.2.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "leva": "^0.10.1",
     "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
+    "motion": "^12.25.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "sass": "^1.97.2",
     "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.4.0",
     "tweakpane": "^4.0.5",
     "uuid-by-string": "^4.0.0",
     "wouter": "^3.9.0"
